fix: letter spacings h2 and p elements

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
   /* letter spacings */
   --ls-0: 0;
-  --ls-02: 0.0013rem;
+  --ls-02: 0.0125rem;
 
   /* spacing */
   --sp-0: 0rem;
@@ -133,6 +133,7 @@ body {
       font-size: var(--fs-22);
       font-weight: var(--fw-bold);
       line-height: var(--lh-120);
+      letter-spacing: var(--ls-0);
     }
 
     & p {
